--- a/tpl/index.tpl.htm
+++ b/tpl/index.tpl.htm
@@ -21,22 +21,22 @@ var $frontendVars = <% $frontendVars|@json_encode %>;
 <h2>怎麼修改這一頁？</h2>
 <h3>程式</h3>
 <ol>
-<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %><% $frontendVars.baseUrl %>/lib/My/IndexController.php&quot; ，</li>
+<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %>/lib/My/IndexController.php&quot; ，</li>
 <li>修改 indexAction() 的內容。</li>
 </ol>
 <h3>樣版</h3>
 <ol>
-<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %><% $frontendVars.baseUrl %>/tpl/template.tpl.htm&quot; ，</li>
+<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %>/tpl/template.tpl.htm&quot; ，</li>
 <li>修改 &lt;body&gt;...&lt;/body&gt; 之間的內容。</li>
 </ol>
 <h3>JavaScript</h3>
 <ol>
-<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %><% $frontendVars.baseUrl %>/pub/js/default.js&quot; ，</li>
+<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %>/pub/js/default.js&quot; ，</li>
 <li>修改內容。</li>
 </ol>
 <h3>CSS</h3>
 <ol>
-<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %><% $frontendVars.baseUrl %>/pub/css/style.js&quot; ，</li>
+<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %>/pub/css/style.js&quot; ，</li>
 <li>修改內容。</li>
 </ol>
 </div>
