--- a/tpl/index.tpl.htm
+++ b/tpl/index.tpl.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>GoEz Framework!!!</title>
+<title>Goez Framework!!!</title>
 <link rel="stylesheet" type="text/css" href="<% $frontendVars.baseUrl %>/pub/css/style.css" media="all" />
 <script type="text/javascript">
 var $frontendVars = <% $frontendVars|@json_encode %>;
@@ -15,7 +15,7 @@ var $frontendVars = <% $frontendVars|@json_encode %>;
 <body>
 <div id="wrapper">
 <div id="header">
-<h1>GoEz Framework!!!</h1>
+<h1>Goez Framework!!!</h1>
 </div>
 <div id="content">
 <h2>怎麼修改這一頁？</h2>
@@ -41,7 +41,7 @@ var $frontendVars = <% $frontendVars|@json_encode %>;
 </ol>
 </div>
 <div id="footer">
-<p>Powered by <a href="http://code.google.com/p/goezframework/" target="_blank">GoEz Framework</a></p>
+<p>Powered by <a href="http://code.google.com/p/goezframework/" target="_blank">Goez Framework</a></p>
 </div>
 </div>
 <!--[if lte IE 6]><script src="<% $frontendVars.baseUrl %>/pub/lib/ie6/warning.js?v=<% ''|@time %>"></script><script>window.onload=function(){e($frontendVars.baseUrl + '/pub/lib/ie6/')}</script><![endif]-->
