修改 Smarty delimiter

--- a/tpl/index.tpl.htm
+++ b/tpl/index.tpl.htm
@@ -1,49 +1,49 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Goez Framework!!!</title>
-<link rel="stylesheet" type="text/css" href="<% $fvars.baseUrl %>/pub/css/style.css" media="all" />
-<script type="text/javascript">
-var $fvars = <% $fvars|@json_encode %>;
-</script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script type="text/javascript" src="<% $fvars.baseUrl %>/pub/lib/jquery/form.js"></script>
-<script type="text/javascript" src="<% $fvars.baseUrl %>/pub/js/default.js"></script>
-</head>
+<!DOCTYPE html>
+<html lang="zh-TW">
+    <head>
+        <meta charset="utf-8">
+        <title>Goez Framework!!!</title>
+        <link rel="stylesheet" href="{{$fvars.baseUrl}}/css/style.css" media="all">
+        <script>
+            var $fvars = {{$fvars|@json_encode}};
+        </script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+        <script src="{{$fvars.baseUrl}}/lib/jquery/form.js"></script>
+        <script src="{{$fvars.baseUrl}}/js/default.js"></script>
+    </head>
 
-<body>
-<div id="wrapper">
-<div id="header">
-<h1>Goez Framework!!!</h1>
-</div>
-<div id="content">
-<h2>怎麼修改這一頁？</h2>
-<h3>程式</h3>
-<ol>
-<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %>/lib/My/IndexController.php&quot; ，</li>
-<li>修改 indexAction() 的內容。</li>
-</ol>
-<h3>樣版</h3>
-<ol>
-<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %>/tpl/template.tpl.htm&quot; ，</li>
-<li>修改 &lt;body&gt;...&lt;/body&gt; 之間的內容。</li>
-</ol>
-<h3>JavaScript</h3>
-<ol>
-<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %>/pub/js/default.js&quot; ，</li>
-<li>修改內容。</li>
-</ol>
-<h3>CSS</h3>
-<ol>
-<li>打開 &quot;<% $smarty.const.APP_ROOT_PATH %>/pub/css/style.js&quot; ，</li>
-<li>修改內容。</li>
-</ol>
-</div>
-<div id="footer">
-<p>Powered by <a href="http://code.google.com/p/goezframework/" target="_blank">Goez Framework</a></p>
-</div>
-</div>
-<!--[if lte IE 6]><script src="<% $fvars.baseUrl %>/pub/lib/ie6/warning.js?v=<% ''|@time %>"></script><script>window.onload=function(){e($fvars.baseUrl + '/pub/lib/ie6/')}</script><![endif]-->
-</body>
+    <body>
+        <div id="wrapper">
+            <div id="header">
+                <h1>Goez Framework!!!</h1>
+            </div>
+            <div id="content">
+                <h2>怎麼修改這一頁？</h2>
+                <h3>程式</h3>
+                <ol>
+                    <li>打開 &quot;{{$smarty.const.APP_ROOT_PATH}}/lib/My/IndexController.php&quot; ，</li>
+                    <li>修改 indexAction() 的內容。</li>
+                </ol>
+                <h3>樣版</h3>
+                <ol>
+                    <li>打開 &quot;{{$smarty.const.APP_ROOT_PATH}}/tpl/template.tpl.htm&quot; ，</li>
+                    <li>修改 &lt;body&gt;...&lt;/body&gt; 之間的內容。</li>
+                </ol>
+                <h3>JavaScript</h3>
+                <ol>
+                    <li>打開 &quot;{{$smarty.const.APP_ROOT_PATH}}/js/default.js&quot; ，</li>
+                    <li>修改內容。</li>
+                </ol>
+                <h3>CSS</h3>
+                <ol>
+                    <li>打開 &quot;{{$smarty.const.APP_ROOT_PATH}}/css/style.js&quot; ，</li>
+                    <li>修改內容。</li>
+                </ol>
+            </div>
+            <div id="footer">
+                <p>Powered by <a href="http://code.google.com/p/goezframework/" target="_blank">Goez Framework</a></p>
+            </div>
+        </div>
+        <!--[if lte IE 6]><script src="{{$fvars.baseUrl}}/lib/ie6/warning.js?v={{''|@time}}"></script><script>window.onload=function(){e($fvars.baseUrl + '/lib/ie6/')}</script><![endif]-->
+    </body>
 </html>
